--- a/topics/classes.html
+++ b/topics/classes.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn JS — Classes</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
-       
+
     </style>
 </head>
+
 <body>
     <nav>
         <a href="/index.html">home</a>
@@ -26,7 +28,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes">Classes</a></li>
 
         </ul>
-        
+
         <h2>Instructions</h2>
         <p>
             Let's start with the basics, read the instructions in <code>topics/classes.starter.js</code>
@@ -40,6 +42,7 @@
         </div>
     </section>
 
-    <script src="classes.starter.js"></script>
+    <script src="classes.js"></script>
 </body>
+
 </html>
